--- a/css/header.css
+++ b/css/header.css
@@ -44,7 +44,8 @@ button {
   width: 100%;
   height: 75px;
   background: rgba(0, 0, 0, 0.75);
-  backdrop-filter: saturate(1.8) blur(20px);
+  backdrop-filter: saturate(180%) blur(20px);
+  -webkit-backdrop-filter: saturate(180%) blur(20px);
   position: fixed;
   z-index: 1000;
   top: 0;
@@ -212,7 +213,7 @@ button {
     content: "";
     width: 100%;
     height: 1px;
-    background: #2a2a2a;
+    background: #363636;
     position: absolute;
     top: 0;
   }
