--- a/css/manuales.css
+++ b/css/manuales.css
@@ -4,11 +4,11 @@
   padding-top: 95px;
 }
 .main__title {
-  font-size: 6rem;
+  font-size: 5rem;
   line-height: 1.7;
   color: #f5f5f7;
   text-align: center;
-  border-bottom: 1px solid #343434;
+  border-bottom: 1px solid #363636;
   font-weight: 600;
   max-width: 120rem;
   padding: 0 30px;
@@ -79,7 +79,7 @@
   border-radius: 10px;
   background: url("../img/manuales/icon-play.svg") 50% 50% no-repeat, rgba(0, 0, 0, 0.65);
   background-size: 40px 40px;
-  box-shadow: 0px 4px 8px 0px #3a3a3a;
+  box-shadow: 0px 4px 8px 0px #272727;
   transition: all 0.3s;
   opacity: 0;
 }
@@ -101,7 +101,7 @@
 }
 .video__button {
   display: block;
-  width: 190px;
+  width: 240px;
   height: 50px;
   margin: 30px auto 0;
   border: 2px solid #f81b82;
